# NLP-1-rattrapage-UVBF

./: README.md  Rapport.MD  pyproject.toml
nlp1-rattrapage/tests/: test_nlp1_rattrapage.py
nlp1_rattrapage/: notebook.ipynb
